@@ -17,8 +17,6 @@
 // Place, Suite 330, Boston, MA  02111-1307  USA
 
 #include <cerrno>
-#include <cstdlib>
-#include <csignal>
 #include <string>
 #include <sys/ipc.h>
 #include <sys/msg.h>
@@ -36,6 +34,7 @@ namespace reroot
 {
 	string const message_queue_base::no_key = "Cannot get IPC key",
 	             message_queue_base::no_queue = "Cannot get message queue",
+		     inbox::no_send = "Cannot send packet to self",
 	             inbox::no_receive = "Cannot receive packet",
 	             outbox::no_send = "Cannot send packet";
 }
@@ -53,6 +52,29 @@ reroot::message_queue_base::message_queue_base (string const &false_root,
 
 	if (qid == -1)
 		throw xmessage (no_queue, errno);
+}
+
+// Send an empty message of the given type to self.  This is used to queue
+// received signals along with messages.
+void
+reroot::inbox::send_self (message_type const type) const
+{
+	// Create message to send.
+	packet const pkt =
+	{
+		1,
+		{
+			type,
+			0,
+			0,
+			packet_meta_size
+		},
+		""
+	};
+
+	// Send message.
+	if (msgsnd (get_qid (), &pkt, pkt.header.packet_size, 0))
+		throw xmessage (no_send, errno);
 }
 
 // Receive a packet from PID specified therein (zero means get packet from any
@@ -81,55 +103,4 @@ reroot::outbox::operator << (packet const &pkt) const
 		throw xmessage (no_send, errno);
 
 	return *this;
-}
-
-// Signal handler.  Convert signals to System V IPC messages to self.  HUP
-// becomes save & exit, USR1 becomes cleanup database.
-// FIXME: Error reporting.
-void
-reroot::signal_handler (int const signum)
-{
-	message_type type;
-
-	// Identify signal type, & hence message type.
-	switch (signum)
-	{
-	case SIGHUP:
-		type = save_and_exit;
-		break;
-
-	case SIGUSR1:
-		type = cleanup_db;
-		break;
-
-	default:
-		abort ();
-	}
-
-	// Create message to send.
-	packet const pkt =
-	{
-		1,
-		{
-			type,
-			0,
-			0,
-			packet_meta_size
-		},
-		""
-	};
-
-	// Get System V IPC key.
-	key_t const key = ftok (false_root.c_str (), 'i');
-	if (key == -1)
-		abort ();
-
-	// Get System V IPC message queue ID.
-	int const qid = msgget (key, 0);
-	if (qid == -1)
-		abort ();
-
-	// Send message.
-	if (msgsnd (qid, &pkt, pkt.header.packet_size, 0))
-		abort ();
 }
